# mandelbrot-renderer

./: CMakeLists.txt  README.md
src/: input.cpp  input.h  main.cpp  mandelbrot.cpp  mandelbrot.h  message_queue.h  renderer.cpp  renderer.h
